--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,12 @@
-
-recentf
-*.local~
-*.local~
-recentf
-recentf
-recentf
-recentf
-recentf
-.cache/treemacs-persist
-.lsp-session-v1
-recentf
-recentf
+recentf/
+.lsp-session-v1/
+.cache/
 elpa/
-auto-save-list/
-*~
-.cache/treemacs-persist
-.lsp-session-v1
-.cache/treemacs-persist
 .DS_Store
+.lsp-session-v1
+auto-save-list/.saves-31143-Yis-MacBook-Pro.local~
+auto-save-list/.saves-62960-Yis-MacBook-Pro.local~
+recentf
+recentf~
+.lsp-session-v1
 .lsp-session-v1
