--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
-recentf/
 .lsp-session-v1/
 .cache/
 elpa/
 .DS_Store
-.lsp-session-v1
-auto-save-list/.saves-31143-Yis-MacBook-Pro.local~
-auto-save-list/.saves-62960-Yis-MacBook-Pro.local~
+auto-save-list/
+lisp/custom.el
 recentf
 recentf~
-.lsp-session-v1
-.lsp-session-v1
